--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "photographer-portfolio",
+  "name": "portfolio-thomas",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
